--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<meta name="keywords" content="CSS, Framework, Minimalist, Elegant, Design, SCSS">
 	<meta name="author" content="Dzuhan Ramadhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:description" content="DezUI is a lightweight, minimalistic & elegant css framework for starting projects with a minimalist and elegant design">
+	<meta property="og:image" content="/assets/images/dezui-web-preview.png">
 
 	<title>DezUI - CSS Frameworks</title>
 
