--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<meta name="author" content="Dzuhan Ramadhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:description" content="DezUI is a lightweight, minimalistic & elegant css framework for starting projects with a minimalist and elegant design">
-	<meta property="og:image" content="/assets/images/dezui-web-preview.png">
+	<meta property="og:image" content="/assets/main-square.png">
+	
 
 	<title>DezUI - CSS Frameworks</title>
 
