--- a/contributor/index.html
+++ b/contributor/index.html
@@ -8,7 +8,8 @@
 	<meta name="author" content="Dzuhan Ramadhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:description" content="Join to be a part of us. Open to contributions in development or donations.">
-	<meta property="og:image" content="/assets/images/dezui-contributor-preview.png">
+	<meta property="og:image" content="/assets/main-square.png">
+
 
 	<title>DezUI - CSS Frameworks</title>
 
