Fix contribute link

--- a/contributor/index.html
+++ b/contributor/index.html
@@ -41,7 +41,7 @@
 				<h4 class="overview-title">Become a <i>Contributor</i></h4>
 				<!-- <p>With you participating as a Contributor. You have accepted our <a href="/contributor/policy">Contributor Policies</a>.</p><br> -->
 				<a href="https://github.com/DezUI/DezUI" target="_blank" class="btn">Developer</a>
-				<a href="https:/buymeacoffee.com/dezuhan/" target="_blank" class="btn">Donate</a>
+				<a href="https://buymeacoffee.com/dezuhan/" target="_blank" class="btn">Donate</a>
 			</div>
 		</section>
 		<div class="col"></div>
