--- a/assets/navbar/footer.html
+++ b/assets/navbar/footer.html
@@ -1,14 +1,17 @@
 
 <script>
-	fetch("/docs/changelog/changelog.json")
+	fetch("/docs/releases/releases.json")
 	.then(response => {return response.json()})
 	.then(data => {
 		document.getElementById("examples-page").innerHTML = `<a href="/docs/${data[0].version}/examples">Examples</a>`
+		document.getElementById("versions").innerHTML = `<p>Lastest <span class="text-info">@${data[0].version}</span></a>`
 	})
 </script>
 <nav class="container flex column">
 	<section class="navbar-section wrap">
+		<div id="versions"></div>
 		<div><a href="/docs">Docs</a></div>
+		<div><a href="#" title="Up Coming">Releases</a></div>
 		<div id="examples-page"></div>
 		<div><a href="/contributor">Contribute</a></div>
 		<div><a href="https://github.com/DezUI/">Github</a></div>
