--- a/contributor/index.html
+++ b/contributor/index.html
@@ -15,7 +15,7 @@
 
 
 	<link rel="stylesheet" href="/css/dezui.css">
-	<link rel="stylesheet" href="https://ghcdn.rawgit.org/dezui/DezUI/stable/css/core.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/dezui/dezui/css/core.css">
 	<link rel="stylesheet" href="/css/core.css">
 	<link rel="icon" href="/assets/main.svg">
 
