--- a/assets/navbar/footer.html
+++ b/assets/navbar/footer.html
@@ -14,8 +14,8 @@
 		<div><a href="#" title="Up Coming">Releases</a></div>
 		<div id="examples-page"></div>
 		<div><a href="/contributor">Contribute</a></div>
-		<div><a href="https://github.com/DezUI/">Github</a></div>
-		<div><a href="https://twitter.com/dezuicss/">Twitter</a></div>
+		<div><a href="https://github.com/DezUI/" target="_blank">Github</a></div>
+		<div><a href="https://twitter.com/dezuicss/" target="_blank">Twitter</a></div>
 	</section>
 	<section class="info-section">
 		<p>Design and built with &#9749; + &#128187; and Proudly made in <span class="text-info">Indonesia</span> by <a href="https://dezuhan.carrd.co">Dzuhan Ramadhan</a>. Under <a href="https://github.com/dezui/tree/stable/LICENSE">MIT License</a></p><br>
