--- a/assets/navbar/footer.html
+++ b/assets/navbar/footer.html
@@ -18,6 +18,6 @@
 		<div><a href="https://twitter.com/dezuicss/" target="_blank">Twitter</a></div>
 	</section>
 	<section class="info-section">
-		<p>Design and built with &#9749; + &#128187; and Proudly made in <span class="text-info">Indonesia</span> by <a href="https://dezuhan.carrd.co">Dzuhan Ramadhan</a>. Source code license <a href="https://github.com/dezui/tree/stable/LICENSE">MIT</a>Docs<a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p><br>
+		<p>Design and built with &#9749; + &#128187; and Proudly made in <span class="text-info">Indonesia</span> by <a href="https://dezuhan.carrd.co">Dzuhan Ramadhan</a>. Source code license <a href="https://github.com/dezui/tree/stable/LICENSE">MIT</a>. Docs<a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p><br>
 	</section>
 </nav>
