Edit meta & og : description

--- a/contributor/index.html
+++ b/contributor/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="description" content="DezUI is a lightweight, minimalist & elegant UI to start a project with a minimalist and elegant design and We focus on the use of CSS styles and 100% without using JavaScript.">
+	<meta name="description" content="Join to be a part of us. Open to contributions in development or donations.">
 	<meta name="keywords" content="CSS, Framework, Minimalist, Elegant, Design, SCSS">
 	<meta name="author" content="Dzuhan Ramadhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
