Edit meta & og : Description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="keywords" content="CSS, Framework, Minimalist, Elegant, Design, SCSS">
 	<meta name="author" content="Dzuhan Ramadhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:description" content="DezUI is a build fast, minimalistic & elegant css framework for starting projects with a minimalist and elegant design.">
+	<meta property="og:description" content="DezUI is a build fast, minimalistic & elegant css framework for starting projects with a minimalist and elegant design.git push
+	">
 	<meta property="og:image" content="/assets/main-square.png">
 	
 
