--- a/assets/navbar/footer.html
+++ b/assets/navbar/footer.html
@@ -11,7 +11,7 @@
 	<section class="navbar-section wrap">
 		<div id="versions"></div>
 		<div><a href="/docs">Docs</a></div>
-		<div><a href="#" title="Up Coming">Releases</a></div>
+		<div><a href="/docs/changelog">Changelog</a></div>
 		<div id="examples-page"></div>
 		<div><a href="/contributor">Contribute</a></div>
 		<div><a href="https://github.com/DezUI/" target="_blank">Github</a></div>
