move to dezui.vercel.app

--- a/assets/navbar/footer.html
+++ b/assets/navbar/footer.html
@@ -9,13 +9,21 @@
 </script>
 <nav class="container flex column">
 	<section class="navbar-section wrap">
-		<div id="versions"></div>
-		<div><a href="/docs">Docs</a></div>
-		<div><a href="/docs/changelog">Changelog</a></div>
-		<div id="examples-page"></div>
-		<div><a href="/contributor">Contribute</a></div>
-		<div><a href="https://github.com/DezUI/" target="_blank">Github</a></div>
-		<div><a href="https://twitter.com/dezuicss/" target="_blank">Twitter</a></div>
+		<section class="navbar-section wrap">
+			<div id="versions"></div>
+		<!-- </section> -->
+		<!-- <section class="navbar-section wrap"> -->
+			<div><a href="/docs">Docs</a></div>
+			<div><a href="/docs/changelog">Changelog</a></div>
+			<div><a href="/icons">Icons</a></div>
+			<!-- <div><a href="/themes">Themes</a></div> -->
+			<div id="examples-page"></div>
+			<div><a href="/contributor">Contribute</a></div>
+		<!-- </section> -->
+		<!-- <section class="navbar-section wrap"> -->
+			<div><a href="https://github.com/DezUI/" target="_blank">Github</a></div>
+			<div><a href="https://twitter.com/dezuicss/" target="_blank">Twitter</a></div>
+		</section>
 	</section>
 	<section class="info-section">
 		<p>Design and built with &#9749; + &#128187; and Proudly made in <span class="text-info">Indonesia</span> by <a href="https://dezuhan.github.io">Dzuhan Ramadhan</a>. Source code license <a href="https://github.com/dezui/tree/stable/LICENSE">MIT</a>. Docs <a rel="license" href="https://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p><br>
